# EternalEngine

./: .bash_history  .gitmodules  CMakeLists.txt  README.md  build-mingw.sh
Engine/: CMakeLists.txt
Engine/include/: Game.hpp
Engine/include/Backend/GLFW/: WindowGLFW.hpp
Engine/include/Backend/OpenGL/: GLUtils.hpp
Engine/include/Components/: CameraComponent.hpp  Component.hpp  ComponentFactory.hpp  MeshComponent.hpp  ShaderComponent.hpp  TransformComponent.hpp
Engine/include/Rendering/Mesh/: Mesh.hpp
Engine/include/Rendering/Shader/: Shader.hpp
Engine/include/Rendering/Viewport/: Viewport.hpp
Engine/include/Rendering/Window/: RenderSurface.hpp  Window.hpp
Engine/include/SceneManagement/: Scene.hpp
Engine/include/Systems/: ISystem.hpp  RenderSystem.hpp  SystemManager.hpp  TransformSystem.hpp
Engine/src/: CMakeLists.txt  Game.cpp  Scene.cpp  SystemManager.cpp
Engine/src/Backend/GLFW/: WindowGLFW.cpp
Engine/src/Backend/OpenGL/: GLUtils.cpp
Engine/src/Backend/OpenGL/Rendering/: Viewport.cpp
Engine/src/Backend/OpenGL/Rendering/Mesh/: Mesh.cpp
Engine/src/Backend/OpenGL/Rendering/Shader/: Shader.cpp
Engine/src/Components/: ComponentFactory.cpp
Engine/src/GL3/: MeshRenderer.cpp  Viewport.cpp
Engine/src/SceneManagement/: Scene.cpp
Engine/src/Systems/: RenderSystem.cpp  SystemManager.cpp  TransformSystem.cpp
Engine/src/include/: Game.hpp  Scene.hpp
Engine/src/include/Components/: Component.hpp  ComponentFactory.hpp  MeshComponent.hpp  ShaderComponent.hpp  TransformComponent.hpp
Engine/src/include/Rendering/: Renderer.hpp
Engine/src/include/Rendering/Mesh/: Mesh.hpp  MeshRenderer.hpp
Engine/src/include/Rendering/Viewport/: Viewport.hpp
Engine/src/include/Rendering/Window/: RenderSurface.hpp  Window.hpp
Engine/src/include/SceneManagement/: Scene.hpp
Engine/src/include/Systems/: ISystem.hpp  RenderSystem.hpp  SystemManager.hpp  TestSystem.hpp
Engine/src/include/Utils/: MeshUtils.hpp
Game/: MovementSystem.cpp  MovementSystem.hpp  main.cpp
assets/shaders/: frag.glsl  vert.glsl
src/: CMakeLists.txt
src/include/: Entity.hpp
