cmake_minimum_required(VERSION 3.13)
project(MyGame)
include_directories(libs/3rdparty/entt/single_include)
add_subdirectory(Engine)
add_executable(MyGame "Game/main.cpp")
target_include_directories(MyGame PRIVATE Engine/src/include Engine/platforms/include)
find_package(OpenGL REQUIRED)
target_link_libraries(MyGame glew32 glfw3 ${OPENGL_LIBRARIES} EternalEngine EternalEngineSRC)